# bAInary

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-07-gui-subsystem.md
docs/superpowers/specs/: 2026-07-07-gui-subsystem-design.md
docs/wiki/: Architecture.md  CLI-Reference.md  Development-Guide.md  Examples.md  Home.md  Post-MVP-Roadmap.md  Subsystem-A-Lift.md  Subsystem-B-Graph.md  Subsystem-C-RAG.md  Subsystem-D-Refine.md  Subsystem-E-GUI.md
scripts/: gen_fixtures.py  poc_llm.py  test_rag_kimi.py
src/bainary/graph/: __init__.py  callgraph.py  errors.py
src/bainary/gui/: __init__.py  __main__.py  config.py  errors.py  server.py  sse.py  state.py
src/bainary/gui/routes/: __init__.py  _deps.py  binary.py  functions.py  graph.py  meta.py  rag.py  refine.py  settings.py
src/bainary/gui/static/: app.js  index.html  styles.css
src/bainary/gui/static/panels/: asm.js  code.js  console.js  dialogs.js  functionTree.js  graph.js  hex.js  rag.js  strings.js
src/bainary/lift/: __init__.py  __main__.py  api.py  artifact.py  cache.py  cli.py  errors.py  schema.py
src/bainary/lift/backends/: __init__.py  base.py  ghidra_headless.py  lief_capstone.py  postscript.py
src/bainary/rag/: __init__.py  cli.py  client.py  errors.py  index.py  store.py  text.py  vectorize.py
src/bainary/refine/: __init__.py  cache.py  client.py  errors.py  prompts.py  refiner.py
tests/: conftest.py  test_api.py  test_artifact.py  test_backends.py  test_cache.py  test_callgraph.py  test_cli.py  test_errors.py  test_ghidra_headless.py  test_gui_binary.py  test_gui_config.py  test_gui_functions.py  test_gui_graph.py  test_gui_integration.py  test_gui_meta.py  test_gui_rag.py  test_gui_refine.py  test_gui_server.py  test_gui_settings.py  test_gui_sse.py  test_gui_state.py  test_partial_failure.py  test_rag.py  test_refiner.py  test_schema.py  test_snapshot.py
tests/fixtures/: callchain.c  loops.c
tests/fixtures/callchain_elf64/: callchain.elf
tests/fixtures/hello_elf64/: hello.elf
tests/fixtures/loops_elf64/: loops.elf
tests/snapshots/: callchain.json  hello.json  loops.json
