[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bainary"
version = "0.1.0"
description = "AI-assisted reverse engineering platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "lief>=0.14",
    "pydantic>=2.6",
    "typer>=0.12",
    "capstone>=5.0",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bainary-lift = "bainary.lift.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bainary"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-ra"
